[package]
name = "Fordragon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "fcli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "src/server_runner.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
uuid = "1.4.1"
serde = { version = "1.0.188", features = ["derive"] }
mongodb = "2.6.1"
async-trait = { version = "0.1.73", features = [] }
futures = "0.3.28"
crossbeam = "0.8.2"
crossbeam-queue = "0.3.8"
