[package]
name = "Fordragon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[[bin]]
name = "fcli"
path = "src/cli.rs"

[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "mock_client"
path = "src/mock_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
uuid = "1.4.1"
serde = { version = "1.0.188", features = ["derive"] }
mongodb = "2.6.1"
async-trait = { version = "0.1.73", features = [] }
futures = "0.3.28"
bevy_ecs = "0.12.1"
semaphore = "0.4.0"
thiserror = "1.0.68"
anyhow = "1.0.92"
