[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3.28"
log = "0.4.27"
env_logger = "0.11.8"
bevy = "0.16.1"
server = { path = "../server" }